# resume_analyzer

./: .gitignore  1research_output.md  2revised_resume.md  3interview_preparation.md  README.md  fake_resume.md  inputs.json  interview_preparation.md  pyproject.toml  research_output.md  revised_resume.md
resume_analyzer/: crew.py  main.py
resume_analyzer/config/: agents.yaml  tasks.yaml
src/resume_analyzer/: crew.py
src/resume_analyzer/config/: agents.yaml  tasks.yaml
