[project]
name = "resume_analyzer"
version = "0.1.0"
description = "resume_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
resume_analyzer = "resume_analyzer.main:run"
run_crew = "resume_analyzer.main:run"
train = "resume_analyzer.main:train"
replay = "resume_analyzer.main:replay"
test = "resume_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
